[gd_scene load_steps=2 format=3 uid="uid://character_creation"]

[ext_resource type="Script" path="res://scripts/ui/character_creation.gd" id="1_script"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.4, 1)
theme_override_font_sizes/font_size = 36
text = "СОЗДАНИЕ ПЕРСОНАЖА"
horizontal_alignment = 1

[node name="NicknameSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NicknameLabel" type="Label" parent="VBoxContainer/NicknameSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.65, 1)
theme_override_font_sizes/font_size = 16
text = "Имя персонажа:"

[node name="NicknameInput" type="LineEdit" parent="VBoxContainer/NicknameSection"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
placeholder_text = "Введите имя..."
max_length = 20

[node name="GenderSection" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="GenderLabel" type="Label" parent="VBoxContainer/GenderSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.65, 1)
theme_override_font_sizes/font_size = 16
text = "Пол:"

[node name="GenderOption" type="OptionButton" parent="VBoxContainer/GenderSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AppearanceSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HairLabel" type="Label" parent="VBoxContainer/AppearanceSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.65, 1)
theme_override_font_sizes/font_size = 14
text = "Цвет волос:"

[node name="HairSlider" type="HSlider" parent="VBoxContainer/AppearanceSection"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
min_value = 0.0
max_value = 7.0
step = 1.0
value = 1.0

[node name="SkinLabel" type="Label" parent="VBoxContainer/AppearanceSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.65, 1)
theme_override_font_sizes/font_size = 14
text = "Тон кожи:"

[node name="SkinSlider" type="HSlider" parent="VBoxContainer/AppearanceSection"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
min_value = 0.0
max_value = 5.0
step = 1.0
value = 1.0

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = ""
horizontal_alignment = 1

[node name="CreateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "Создать персонажа"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "Назад"

[node name="PreviewPanel" type="PanelContainer" parent="."]
visible = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -350.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = 480.0
grow_horizontal = 0

[node name="SubViewportContainer" type="SubViewportContainer" parent="PreviewPanel"]
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="PreviewPanel/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(330, 400)
render_target_update_mode = 4

[node name="PreviewCamera" type="Camera3D" parent="PreviewPanel/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2.5)
current = true
fov = 40.0

[node name="PreviewLight" type="DirectionalLight3D" parent="PreviewPanel/SubViewportContainer/SubViewport"]
transform = Transform3D(0.866, -0.25, 0.433, 0, 0.866, 0.5, -0.5, -0.433, 0.75, 2, 3, 2)
light_energy = 1.2

[node name="PreviewLight2" type="DirectionalLight3D" parent="PreviewPanel/SubViewportContainer/SubViewport"]
transform = Transform3D(0.866, 0.25, -0.433, 0, 0.866, 0.5, 0.5, -0.433, 0.75, -2, 2, 1)
light_energy = 0.5

[node name="CharacterPreview" type="Node3D" parent="PreviewPanel/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
